--- a/client/src/i18n/locales/ja/pages/about.json
+++ b/client/src/i18n/locales/ja/pages/about.json
@@ -1,5 +1,5 @@
 {
-	"aboutUs": "About Us",
-	"ourStory": "Our Story",
-	"meetTheTeam": "Meet the Team"
+	"aboutUs": "私たちについて",
+	"ourStory": "私たちの物語",
+	"meetTheTeam": "チームに会う"
 }
