--- a/client/src/i18n/locales/ja/pages/user.json
+++ b/client/src/i18n/locales/ja/pages/user.json
@@ -1,13 +1,13 @@
 {
-	"profile": "Profile",
-	"login": "Login",
-	"register": "Register",
-	"logout": "Logout",
-	"username": "Username",
-	"password": "Password",
-	"confirmPassword": "Confirm Password",
-	"forgotPassword": "Forgot Password",
-	"resetPassword": "Reset Password",
-	"updateProfile": "Update Profile",
-	"deleteAccount": "Delete Account"
+	"profile": "プロファイル",
+	"login": "ログイン",
+	"register": "登録",
+	"logout": "ログアウト",
+	"username": "ユーザー名",
+	"password": "パスワード",
+	"confirmPassword": "パスワードを確認",
+	"forgotPassword": "パスワードをお忘れですか",
+	"resetPassword": "パスワードをリセット",
+	"updateProfile": "プロファイルを更新",
+	"deleteAccount": "アカウントを削除"
 }
