--- a/client/src/i18n/locales/zh/pages/about.json
+++ b/client/src/i18n/locales/zh/pages/about.json
@@ -1,5 +1,5 @@
 {
-	"aboutUs": "About Us",
-	"ourStory": "Our Story",
-	"meetTheTeam": "Meet the Team"
+	"aboutUs": "关于我们",
+	"ourStory": "我们的故事",
+	"meetTheTeam": "会见团队"
 }
