--- a/client/src/i18n/locales/de/pages/user.json
+++ b/client/src/i18n/locales/de/pages/user.json
@@ -1,4 +1,8 @@
 {
+	"pageTitle": {
+		"singular": "Seite",
+		"plural": "Seiten"
+	},
 	"profile": "Profil",
 	"login": "Anmelden",
 	"register": "Registrieren",
