--- a/client/src/i18n/locales/en/pages/user.json
+++ b/client/src/i18n/locales/en/pages/user.json
@@ -1,4 +1,8 @@
 {
+	"pageTitle": {
+		"singular": "User",
+		"plural": "Users"
+	},
 	"profile": "Profile",
 	"login": "Login",
 	"register": "Register",
