--- a/client/src/i18n/locales/es/pages/user.json
+++ b/client/src/i18n/locales/es/pages/user.json
@@ -1,4 +1,8 @@
 {
+	"pageTitle": {
+		"singluar": "Usuario",
+		"plural": "Usuarios"
+	},
 	"profile": "Perfil",
 	"login": "Iniciar sesión",
 	"register": "Registrarse",
