--- a/client/src/i18n/locales/fr/pages/about.json
+++ b/client/src/i18n/locales/fr/pages/about.json
@@ -1,4 +1,5 @@
 {
+	"pageTitle": "À Propos",
 	"aboutUs": "À propos de nous",
 	"ourStory": "Notre histoire",
 	"meetTheTeam": "Rencontrez l'équipe"
