--- a/client/src/i18n/locales/fr/pages/user.json
+++ b/client/src/i18n/locales/fr/pages/user.json
@@ -1,4 +1,8 @@
 {
+	"pageTitle": {
+		"singular": "Utilisateur",
+		"plural": "Utilisateurs"
+	},
 	"profile": "Profil",
 	"login": "Connexion",
 	"register": "S'inscrire",
