--- a/client/src/i18n/locales/zh/pages/home.json
+++ b/client/src/i18n/locales/zh/pages/home.json
@@ -1,4 +1,5 @@
 {
+	"pageTitle": "家",
 	"header": "欢迎来到我们的内容管理系统",
 	"body": {
 		"content": "这是一个 MERN（MongoDB、Express.js、React.js、Node.js）堆栈应用程序，使用 Redux 进行状态管理，并支持 Docker。",
